home page changes

--- a/home.html
+++ b/home.html
@@ -44,8 +44,8 @@
             </div> 
            <div class="position-absolute translate-middle  start-50">
                 <a href="#" class="text-decoration-none text">Get in touch <svg class="ms-1" width="15" height="20" viewBox="0 0 15 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M7.83789 2.9541L13.1259 8.24214L7.83789 13.5302" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
-                    <path d="M13.1249 8.24213L1.875 8.24213" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M7.83789 2.9541L13.1259 8.24214L7.83789 13.5302" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M13.1249 8.24213L1.875 8.24213" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                 </a>
            </div>
@@ -107,16 +107,16 @@
                     </div>
                 </div>
                 <div class="row align-items-center pt-4 about-content">
-                    <div class="col-6">
+                    <div class="col-md-6">
                         <img src="image/about.png" class="w-100">
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-6 ps-5">
                         <p>Established in 2012 in Texas, USA, we have dedicated over 12 years to achieving excellence in Windows application development, embedded applications, and firmware development.</p>
                         <p>As a privately funded and privately owned company, we have experienced exponential growth, generating multimillion-dollar revenues.</p>
-                        <a href="#" class="text-decoration-none"><img src="image/arrow.svg" class="pe-2">Explore</a>
+                        <a href="#" class="text-decoration-none"><img src="image/arrow-white.svg" class="pe-2">Explore</a>
                     </div>
                 </div>
-                <div class="row data-sec">
+                <div class="row data-sec g-3">
                     <div class="col-6">
                         <div class="data">
                             <p  class="pb-2">A strong experience  of</p>
@@ -127,6 +127,24 @@
                         <div class="data">
                             <p class="pb-2">Products installed </p>
                             <h2 class="pt-2">16+ Million</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="dell">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-3">
+                        <img src="image/dell.png">
+                    </div>
+                    <div class="col-1">
+                        <div class="middle-boder"></div>
+                    </div>
+                    <div class="col-8">
+                        <div class="dell-text text-white">
+                            <h1>Proud Strategic Partners of Dell Technologies</h1>
+                            <p>At IndiLogic, we’re honored to be a strategic partner of Dell, a global leader in technology innovation. This collaboration empowers us to deliver cutting-edge solutions that drive digital transformation and success for our clients. Together, we’re shaping the future of technology.</p>
                         </div>
                     </div>
                 </div>
@@ -161,7 +179,7 @@
                         <p>Developed in partnership with Dell, Dell Secure Link Receiver RF Dongle firmware with enhanced security and speed</p>
                     </div>
                 </div>
-                <a href="#" class="text-decoration-none explore"><img src="image/arrow-white.svg" class="pe-2">Explore</a>
+                <a href="#" class="text-decoration-none explore"><img src="image/arrow-blue.svg" class="pe-2">Explore</a>
             </div>
         </section>
         <section class="fifth-sec">
@@ -220,21 +238,16 @@
                         <p>Accounting</p>
                     </div>
                 </div>
-                
-            </div>
-        </section>
-        <section class="seven-sec">
-            <div class="connect text-center container">
-                <h2>How can we help you? Lets connect.</h2>
-                <a href="#" class="text-decoration-none"><img src="image/arrow.svg" class="pe-2">Connect</a>
-            </div>
-        </section>
-        <section class="eight-sec">
-            <div class="container text-white">
-                <h4 class="pb-2">Trademark Disclaimer</h4>
-                <p>All trademarks, logos, and brand names are the property of their respective owners. All company, product, and service names used on this website are for identification purposes only. 
-                Use of these names, trademarks, and brands does not imply endorsement</p>
-            </div>
+                <div class="connect text-center">
+                    <h2>How can we help you? Lets connect.</h2>
+                    <a href="#" class="text-decoration-none"><img src="image/arrow-white.svg" class="pe-2">Connect</a>
+                </div>
+                <div class="trademarks text-white">
+                    <h4 class="pb-2">Trademark Disclaimer</h4>
+                    <p>All trademarks, logos, and brand names are the property of their respective owners. All company, product, and service names used on this website are for identification purposes only. 
+                    Use of these names, trademarks, and brands does not imply endorsement</p>
+                </div>
+            </div>   
         </section>
     </main>
     <footer>
