--- a/home.html
+++ b/home.html
@@ -51,9 +51,9 @@
                 <img src="image/banner-m.png" class="w-100 d-md-none d-block">
             </div> 
            <div class="position-absolute translate-middle  start-50">
-                <a href="#" class="text-decoration-none text">Get in touch <svg class="ms-1" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M7.83594 2.21191L13.124 7.49996L7.83594 12.788" stroke="#E7E7E7" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    <path d="M13.1249 7.49988L1.875 7.49988" stroke="#E7E7E7" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <a href="#" class="text-decoration-none text">Get in touch <svg class="ms-2" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M7.83594 2.21191L13.124 7.49996L7.83594 12.788" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M13.1249 7.49988L1.875 7.49988" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                     
                 </a>
@@ -115,19 +115,19 @@
         <section class="third-sec">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 common-title">
+                    <div class="col-md-7 common-title">
                         <h4>ABOUT</h4>
                         <h3>At IndiLogic LLC (USA), we are committed to delivering high-quality products and services to our clients.</h3>
                     </div>
                 </div>
-                <div class="row align-items-center pt-4 about-content">
+                <div class="row align-items-center pt-5 about-content">
                     <div class="col-md-6 pe-md-5">
                         <img src="image/about.png" class="w-100">
                     </div>
                     <div class="col-md-6 ps-md-5">
                         <p>Established in 2012 in Texas, USA, we have dedicated over 12 years to achieving excellence in Windows application development, embedded applications, and firmware development.</p>
                         <p>As a privately funded and privately owned company, we have experienced exponential growth, generating multimillion-dollar revenues.</p>
-                        <a href="#" class="text-decoration-none"><svg class="me-2" width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <a href="#" class="text-decoration-none"><svg class="me-3" width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M2.30664 0.131329C1.69745 0.131329 1.20359 0.625179 1.20359 1.23438C1.20359 1.84357 1.69745 2.33742 2.30664 2.33742V0.131329ZM2.30664 2.33742H18.5679V0.131329H2.30664V2.33742Z" fill="white"/>
                             <path d="M16.8749 18C16.8749 18.6214 17.3786 19.1251 18 19.1251C18.6214 19.1251 19.1251 18.6214 19.1251 18L16.8749 18ZM19.1251 18L19.1251 1.0237e-06L16.8749 1.12206e-06L16.8749 18L19.1251 18Z" fill="white"/>
                             <path d="M1.11353 17.9428C0.623945 18.4857 0.623945 19.3659 1.11353 19.9088C1.60311 20.4516 2.39689 20.4516 2.88647 19.9088L1.11353 17.9428ZM2.88647 19.9088L18.2273 2.89792L16.4544 0.931977L1.11353 17.9428L2.88647 19.9088Z" fill="white"/>
@@ -197,7 +197,7 @@
                         <p>Developed in partnership with Dell, Dell Secure Link Receiver RF Dongle firmware with enhanced security and speed</p>
                     </div>
                 </div>
-                <a href="#" class="text-decoration-none explore"><svg class="me-2" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <a href="#" class="text-decoration-none explore"><svg class="me-3" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M2.30664 0.131329C1.69745 0.131329 1.20359 0.625179 1.20359 1.23438C1.20359 1.84357 1.69745 2.33742 2.30664 2.33742V0.131329ZM2.30664 2.33742H18.5679V0.131329H2.30664V2.33742Z" fill="#256497"/>
                     <path d="M16.5234 18.2349C16.5188 18.8563 17.0188 19.3646 17.6402 19.3702C18.2615 19.3758 18.7689 18.8767 18.7735 18.2553L16.5234 18.2349ZM18.7735 18.2553L18.8987 1.24481L16.6486 1.22444L16.5234 18.2349L18.7735 18.2553Z" fill="#256497"/>
                     <path d="M1.11353 17.9428C0.623945 18.4857 0.623945 19.3659 1.11353 19.9088C1.60311 20.4516 2.39689 20.4516 2.88647 19.9088L1.11353 17.9428ZM2.88647 19.9088L18.2273 2.89792L16.4544 0.931977L1.11353 17.9428L2.88647 19.9088Z" fill="#256497"/>
@@ -208,7 +208,7 @@
             <div class="container">
                 <div class="common-title mw-10">
                     <h4>OUR  SERVICES</h4>
-                    <h3 class="mw-100">We embrace creativity and innovation, pushing technology's boundaries to deliver cutting-edge solutions.                    </h3>
+                    <h3>We embrace creativity and innovation, pushing technology's boundaries to deliver cutting-edge solutions.                    </h3>
                 </div>
                 <div class="row service-sec">
                     <div class="col-md-6">
@@ -239,7 +239,7 @@
             </div>
         </section>
         <section class="six-sec">
-            <div class="container">
+            <div class="container position-relative">
                 <div class="common-title text-white">
                     <h4>INDUSTRIES WE WORK WITH</h4>
                 </div>
@@ -256,7 +256,7 @@
                 </div>
                 <div class="connect text-center">
                     <h2>How can we help you? Lets connect.</h2>
-                    <a href="#" class="text-decoration-none"><svg class="me-2" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <a href="#" class="text-decoration-none"><svg class="me-3" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M2.30664 0.131329C1.69745 0.131329 1.20359 0.625179 1.20359 1.23438C1.20359 1.84357 1.69745 2.33742 2.30664 2.33742V0.131329ZM2.30664 2.33742H18.5679V0.131329H2.30664V2.33742Z" fill="white"/>
                         <path d="M16.5234 18.2349C16.5188 18.8563 17.0188 19.3646 17.6402 19.3702C18.2615 19.3758 18.7689 18.8767 18.7735 18.2553L16.5234 18.2349ZM18.7735 18.2553L18.8987 1.24481L16.6486 1.22444L16.5234 18.2349L18.7735 18.2553Z" fill="white"/>
                         <path d="M1.11353 17.9428C0.623945 18.4857 0.623945 19.3659 1.11353 19.9088C1.60311 20.4516 2.39689 20.4516 2.88647 19.9088L1.11353 17.9428ZM2.88647 19.9088L18.2273 2.89792L16.4544 0.931977L1.11353 17.9428L2.88647 19.9088Z" fill="white"/>
