--- a/home.html
+++ b/home.html
@@ -274,7 +274,7 @@
         <div class="footer-sec">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 first-sec-footer">
                         <img src="image/footer-logo.png" class="f-logo ">
                         <div class="social-icon d-md-block d-none">
                             <a href="#"><img src="image/Facebook.png"></a>
@@ -285,7 +285,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="row f-menu-add">
-                            <div class="col-md-6">
+                            <div class="col-md-6 ">
                                 <div class="f-menu">
                                     <h5 class="f-title">Navigation</h5>
                                     <ul class="m-0 p-0">
