changes by client

--- a/home.html
+++ b/home.html
@@ -62,7 +62,7 @@
         <section class="second-sec pt-5 pb-5">
             <div class="icon-box container">
                 <div class="row p-md-4">
-                    <div class="col-md-3 col-6">
+                    <div class="col-lg-3 col-6">
                         <a href="#Development1">
                             <div class="icon-content text-center">
                                 <svg width="72" height="76" viewBox="0 0 72 76" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -72,7 +72,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-md-3 col-6">
+                    <div class="col-lg-3 col-6">
                         <a href="#Development2">
                             <div class="icon-content text-center">
                                 <svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -86,7 +86,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-md-3 col-6">
+                    <div class="col-lg-3 col-6">
                         <a href="#Development3">
                             <div class="icon-content text-center">
                                 <svg width="93" height="94" viewBox="0 0 93 94" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -99,7 +99,7 @@
                             </div>
                          </a>
                     </div>
-                    <div class="col-md-3 col-6">
+                    <div class="col-lg-3 col-6">
                         <a href="#Development4">
                             <div class="icon-content text-center">
                                 <svg width="68" height="77" viewBox="0 0 68 77" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -115,16 +115,16 @@
         <section class="third-sec">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7 common-title">
+                    <div class="col-lg-7 common-title">
                         <h4>ABOUT</h4>
                         <h3>At IndiLogic LLC (USA), we are committed to delivering high-quality products and services to our clients.</h3>
                     </div>
                 </div>
                 <div class="row align-items-center pt-5 about-content">
-                    <div class="col-md-6 pe-md-5">
+                    <div class="col-md-6 pe-lg-5">
                         <img src="image/about.png" class="w-100">
                     </div>
-                    <div class="col-md-6 ps-md-5">
+                    <div class="col-md-6 ps-lg-5">
                         <p>Established in 2012 in Texas, USA, we have dedicated over 12 years to achieving excellence in Windows application development, embedded applications, and firmware development.</p>
                         <p>As a privately funded and privately owned company, we have experienced exponential growth, generating multimillion-dollar revenues.</p>
                         <a href="#" class="text-decoration-none"><svg class="me-3" width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -144,7 +144,7 @@
                     <div class="col-md-6 ps-md-5">
                         <div class="data">
                             <p class="pb-2">Products installed </p>
-                            <h2 class="pt-md-2">16+ Million</h2>
+                            <h2 class="pt-md-2">16+ Millions</h2>
                         </div>
                     </div>
                 </div>
@@ -172,7 +172,7 @@
             <div class="container">
                 <div class="common-title text-white">
                     <h4>OUR PRODUCTS</h4>
-                    <h3 class="text-white">We deliver top-quality products and services with pride and high standards</h3>
+                    <h3 class="text-white">We take great pride in delivering top-quality products and services, ensuring the highest standards in everything we do.</h3>
                 </div>
                 <div class="img-content-sec text-white">
                     <div class="img-content">
@@ -211,25 +211,25 @@
                     <h3>We embrace creativity and innovation, pushing technology's boundaries to deliver cutting-edge solutions.                    </h3>
                 </div>
                 <div class="row service-sec">
-                    <div class="col-md-6">
+                    <div class="col-md-6 pe-lg-5">
                         <div class="service" id="Development1">
                             <img src="image/service-1.png" class="w-100">
                             <p class="text-white">Device Drivers Development</p>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 ps-lg-5">
                         <div class="service" id="Development2">
                             <img src="image/service-2.png" class="w-100">
                             <p class="text-white">Desktop Application Development</p>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 pe-lg-5">
                         <div class="service" id="Development3">
                             <img src="image/service-3.png" class="w-100">
                             <p class="text-white">Firmware/IoT Development</p>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 ps-lg-5">
                         <div class="service" id="Development4">
                             <img src="image/service-4.png" class="w-100">
                             <p class="text-white">Mobile Application Development</p>
@@ -255,7 +255,7 @@
                     <p>Accounting</p>
                 </div>
                 <div class="connect text-center">
-                    <h2>How can we help you? Lets connect.</h2>
+                    <h2>How can we help you? Let's connect.</h2>
                     <a href="#" class="text-decoration-none"><svg class="me-3" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M2.30664 0.131329C1.69745 0.131329 1.20359 0.625179 1.20359 1.23438C1.20359 1.84357 1.69745 2.33742 2.30664 2.33742V0.131329ZM2.30664 2.33742H18.5679V0.131329H2.30664V2.33742Z" fill="white"/>
                         <path d="M16.5234 18.2349C16.5188 18.8563 17.0188 19.3646 17.6402 19.3702C18.2615 19.3758 18.7689 18.8767 18.7735 18.2553L16.5234 18.2349ZM18.7735 18.2553L18.8987 1.24481L16.6486 1.22444L16.5234 18.2349L18.7735 18.2553Z" fill="white"/>
@@ -317,7 +317,7 @@
             </div>
         </div>
         <div class="bottom-footer text-white text-center">
-            <p>Copyright IndiLogic LLC/IndiLogic Pvt. Ltd</p>
+            <p>Copyright: Indilogic LLC/IndiLogic Pvt. Ltd 2024 </p>
         </div>
     </footer>
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
