add zoom effect

--- a/home.html
+++ b/home.html
@@ -228,23 +228,23 @@
                     <h3 class="text-white">We take great pride in delivering top-quality products and services, ensuring the highest standards in everything we do.</h3>
                 </div>
                 <div class="img-content-sec text-white">
-                    <div class="img-content">
+                    <div class="img-content default-zoom">
                         <div class="img-wrapper">
-                            <img src="image/img-1.png" alt="Dell Peripheral Manager">
+                            <img src="image/img-1.png" alt="Dell Peripheral Manager" class="hover-image ">
                         </div>
                         <h4>Dell Peripheral Manager</h4>
                         <p>Dell Peripheral Manager developed in partnership with Dell.</p>
                     </div>
                     <div class="img-content">
                         <div class="img-wrapper">
-                            <img src="image/img-2.png">
+                            <img src="image/img-2.png" class="hover-image">
                         </div>
                         <h4>Dell Pair</h4>
                         <p>Dell Pair is a software that is developed in partnership with Dell and available on several Dell platforms.</p>
                     </div>
                     <div class="img-content">
                         <div class="img-wrapper">
-                            <img src="image/img-3.png">
+                            <img src="image/img-3.png" class="hover-image">
                         </div>
                         <h4>Dell Secure Link Receiver</h4>
                         <p>Developed in partnership with Dell, Dell Secure Link Receiver RF Dongle firmware with enhanced security and speed</p>
@@ -374,6 +374,7 @@
         </div>
     </footer>
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
 </html>
