--- a/home.html
+++ b/home.html
@@ -273,7 +273,7 @@
                     <div class="col-md-6 ps-lg-5">
                         <div class="service" id="Development2">
                             <img src="image/service-2.png" class="w-100">
-                            <p class="text-white">Desktop Application Development</p>
+                            <p class="text-white">Cross-Platform Desktop Application Development</p>
                         </div>
                     </div>
                     <div class="col-md-6 pe-lg-5">
@@ -315,11 +315,7 @@
                         <path d="M1.11353 17.9428C0.623945 18.4857 0.623945 19.3659 1.11353 19.9088C1.60311 20.4516 2.39689 20.4516 2.88647 19.9088L1.11353 17.9428ZM2.88647 19.9088L18.2273 2.89792L16.4544 0.931977L1.11353 17.9428L2.88647 19.9088Z" fill="white"/>
                         </svg>Connect</a>
                 </div>
-                <div class="trademarks text-white">
-                    <h4 class="pb-2">Trademark Disclaimer</h4>
-                    <p>All trademarks, logos, and brand names are the property of their respective owners. All company, product, and service names used on this website are for identification purposes only. 
-                    Use of these names, trademarks, and brands does not imply endorsement</p>
-                </div>
+                
             </div>   
         </section>
     </main>
@@ -355,7 +351,7 @@
                                 <div class="f-address">
                                     <h5 class="f-title">Locations</h5>
                                     <p><b>USA:</b> IndiLogic LLC, Creek Bend Office Condominiums, 930 South Bell Blvd, Suite 302 Cedar Park, TX 78613, USA</p>
-                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astril, Business No. 3, Office No. 816, Sector.94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301</p>
+                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816  & 848 , Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 2013014</p>
                                 </div>
                                 <div class="social-icon d-md-none d-block">
                                     <a href="#"><img src="image/Facebook.png"></a>
@@ -370,7 +366,12 @@
             </div>
         </div>
         <div class="bottom-footer text-white text-center">
-            <p>Copyright: Indilogic LLC/IndiLogic Pvt. Ltd 2024 </p>
+            <div class="trademarks text-white">
+                <h4 class="pb-2">Trademark Disclaimer</h4>
+                <p>All trademarks, logos, and brand names are the property of their respective owners. All company, product, and service names used on this website are for identification purposes only. 
+                Use of these names, trademarks, and brands does not imply endorsement</p>
+            </div>
+            <p class="pt-2">Copyright: Indilogic LLC/IndiLogic Pvt. Ltd 2024 </p>
         </div>
     </footer>
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
