--- a/home.html
+++ b/home.html
@@ -267,25 +267,38 @@
                     <div class="col-md-6 pe-lg-5">
                         <div class="service" id="Development1">
                             <img src="image/service-1.png" class="w-100">
-                            <p class="text-white">Device Drivers Development</p>
+                            <div class="slide-up">
+                                <h4 class="text-white">Device Drivers Development</h4>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-6 ps-lg-5">
                         <div class="service" id="Development2">
                             <img src="image/service-2.png" class="w-100">
-                            <p class="text-white">Cross-Platform Desktop Application Development</p>
+                            <div class="slide-up">
+                                <h4 class="text-white">Cross-Platform Desktop Application Development</h4>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                            </div>
+                            
                         </div>
                     </div>
                     <div class="col-md-6 pe-lg-5">
                         <div class="service" id="Development3">
                             <img src="image/service-3.png" class="w-100">
-                            <p class="text-white">Firmware/IoT Development</p>
+                            <div class="slide-up">
+                                <h4 class="text-white">Firmware/IoT Development</h4>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-6 ps-lg-5">
                         <div class="service" id="Development4">
                             <img src="image/service-4.png" class="w-100">
-                            <p class="text-white">Mobile Application Development</p>
+                            <div class="slide-up">
+                                <h4 class="text-white">Mobile Application Development</h4>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
