--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
             </svg>  
           </button>
         </div>
-      </header>
+    </header>
       
     <main>
         <section class="banner-sec container">
@@ -178,13 +178,13 @@
                         <img src="image/about.png" class="w-100">
                     </div>
                     <div class="col-md-6 ps-lg-5">
-                        <p>Established in 2012 in Texas, USA, we have dedicated over 12 years to achieving excellence in Windows application development, embedded applications, and firmware development.</p>
+                        <p>Established in 2012 in Texas, USA, we have dedicated years to achieving excellence in Windows application development, embedded applications, and firmware development.</p>
                         <p>As a privately funded and privately owned company, we have experienced exponential growth, generating multimillion-dollar revenues.</p>
                         <a href="#" class="text-decoration-none"><svg class="me-3" width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M2.30664 0.131329C1.69745 0.131329 1.20359 0.625179 1.20359 1.23438C1.20359 1.84357 1.69745 2.33742 2.30664 2.33742V0.131329ZM2.30664 2.33742H18.5679V0.131329H2.30664V2.33742Z" fill="white"/>
                             <path d="M16.8749 18C16.8749 18.6214 17.3786 19.1251 18 19.1251C18.6214 19.1251 19.1251 18.6214 19.1251 18L16.8749 18ZM19.1251 18L19.1251 1.0237e-06L16.8749 1.12206e-06L16.8749 18L19.1251 18Z" fill="white"/>
                             <path d="M1.11353 17.9428C0.623945 18.4857 0.623945 19.3659 1.11353 19.9088C1.60311 20.4516 2.39689 20.4516 2.88647 19.9088L1.11353 17.9428ZM2.88647 19.9088L18.2273 2.89792L16.4544 0.931977L1.11353 17.9428L2.88647 19.9088Z" fill="white"/>
-                            </svg>Explore</a>
+                        </svg>Explore</a>
                     </div>
                 </div>
                 <div class="row data-sec g-3">
@@ -224,7 +224,7 @@
         <section class="four-sec">
             <div class="container">
                 <div class="common-title text-white">
-                    <h4>OUR PRODUCTS</h4>
+                    <h4>PRODUCTS</h4>
                     <h3 class="text-white">We take great pride in delivering top-quality products and services, ensuring the highest standards in everything we do.</h3>
                 </div>
                 <div class="img-content-sec text-white">
@@ -332,6 +332,7 @@
             </div>   
         </section>
     </main>
+    
     <footer>
         <div class="footer-sec">
             <div class="container">
@@ -354,9 +355,9 @@
                                         <li><a href="#" class="text-decoration-none">Home</a></li>
                                         <li><a href="#" class="text-decoration-none">Services</a></li>
                                         <li><a href="#" class="text-decoration-none">About us</a></li>
-                                        <li><a href="#" class="text-decoration-none">Company overview</a></li>
                                         <li><a href="#" class="text-decoration-none">Contact us</a></li>
                                         <li><a href="#" class="text-decoration-none">Privacy Policy</a></li>
+                                        <li><a href="#" class="text-decoration-none">Trademark Disclaimer</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -379,11 +380,6 @@
             </div>
         </div>
         <div class="bottom-footer text-white text-center">
-            <div class="trademarks text-white">
-                <h4 class="pb-2">Trademark Disclaimer</h4>
-                <p>All trademarks, logos, and brand names are the property of their respective owners. All company, product, and service names used on this website are for identification purposes only. 
-                Use of these names, trademarks, and brands does not imply endorsement</p>
-            </div>
             <p class="pt-2">Copyright: Indilogic LLC/IndiLogic Pvt. Ltd 2024 </p>
         </div>
     </footer>
